--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 
     implementation('org.springframework.boot:spring-boot-starter-mustache')
 
+    //구글 로그인 연동
+    implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+
     //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
