--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     //구글 로그인 연동
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
 
+    implementation ('org.springframework.session:spring-session-jdbc')
+
     //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
