--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
     implementation ('org.springframework.session:spring-session-jdbc')
 
+    implementation('org.springframework.security:spring-security-test')
+
     //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
