--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,12 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
+// for Junit 5
+test {
+    useJUnitPlatform()
+}
 
+dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 
@@ -42,6 +46,7 @@ dependencies {
 
     implementation('org.springframework.security:spring-security-test')
 
-    //testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    //testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    annotationProcessor ('org.projectlombok:lombok')
+    testImplementation ('org.junit.jupiter:junit-jupiter-api')
+    testRuntimeOnly ('org.junit.jupiter:junit-jupiter-engine')
 }
