--- a/build.gradle
+++ b/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     testRuntimeOnly ('org.junit.jupiter:junit-jupiter-engine')
 
     implementation('org.mariadb.jdbc:mariadb-java-client')
+    runtimeOnly ('mysql:mysql-connector-java')
 }
