--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,15 @@ branches:
   only:
     - master
 
-#Travis CI 서버의 Home
+# Travis CI 서버의 Home
+# gradle을 통하여 의존성을 받게 되면 이를 캐시하여 배포할 때 마다 다시 받지 않도록 설정한다.
 cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
+# main 브랜치에 push 되면 수행되는 명령어이다.
+# 프로젝트 내에 권한이 추가된 gradlew를 활용하여 clean, build를 진행한다.
 script: "./gradlew clean build"
 
 #CI 실행 완료 시 메일로 알림
