--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ script: "./gradlew clean build"
 notifications:
   email:
     recipients:
-      - cji513@naver.com
+      - chungjongin@gmail.com
