--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,19 @@ deploy:
     local_dir: deploy
     wait-until-deployed: true
 
+    #codedeploy 관련 코드
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: book-springboot-build
+    key: BookProject.zip
+    bundle_type: zip
+    application: book-springboot-webservice
+    deployment_group: book-springboot-webservice-group
+    region: ap-northeast-2
+    wait-until-deployed: true
+
+
 #CI 실행 완료 시 메일로 알림
 notifications:
   email:
