--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,13 @@ cache:
 script: "./gradlew clean build"
 
 before_deploy:
-  - zip -r BookProject *
-  - mkdir -p deploy
-  - mv BookProject.zip deploy/BookProject.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/BookProject.zip
 
 #deploy
 deploy:
